feat: refactor mapper to use dtos
Refs: #102